Improving accuracy. All printflagsfinal comes from a HotSpot JVM